sharing and qr fixes
